<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateNoteActivity">

    <TextView
        android:id="@+id/createNoteHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:text="@string/time_for_a_new_note"
        android:textColor="@color/olive_grey"
        android:textSize="@dimen/sp_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/noteTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:text="@string/enter_the_title"
        android:textColor="@color/olive_grey"
        android:textSize="@dimen/sp_18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createNoteHeading" />

    <EditText
        android:id="@+id/noteTitleEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        android:layout_margin="@dimen/dp_10"
        android:background="@drawable/background_rounded"
        android:maxLength="100"
        android:textSize="@dimen/sp_18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/noteTitleTextView" />

    <TextView
        android:id="@+id/noteContentTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:text="@string/enter_the_content"
        android:textColor="@color/olive_grey"
        android:textSize="@dimen/sp_18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/noteTitleEditText" />

    <EditText
        android:id="@+id/noteContentEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_100"
        android:layout_margin="@dimen/dp_10"
        android:background="@drawable/background_rounded"
        android:gravity="start"
        android:inputType="textMultiLine"
        android:textSize="@dimen/sp_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/noteContentTextView" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:background="@drawable/background_rounded_button"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="saveNote"
        android:text="@string/save_note"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/noteContentEditText" />


</androidx.constraintlayout.widget.ConstraintLayout>